--- a/src/components/WorksCarousel.scss
+++ b/src/components/WorksCarousel.scss
@@ -11,12 +11,12 @@
         position: absolute;
         top: 40%;
         z-index: 1000;
-
-        border: solid black;
+        border: solid $clr_black;
         border-width: 0 $line_width $line_width 0;
         display: inline-block;
         padding: 12px;
         transition: 0.1s ease-in-out;
+        background: linear-gradient(to bottom right, transparent, white);
 
         &.arrow-left {
           transform: rotate(135deg);
